fixed up the html files to be more orginized.

--- a/cgames/templates/profile.html
+++ b/cgames/templates/profile.html
@@ -2,17 +2,10 @@
 <html lang="en">
   <head>
     <title>CGames</title>
-
-
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <link href="../static/signup.css" rel="stylesheet">
-
   </head>
-
   <body>
-
     <div class="container">
       <div class="header">
         <nav>
@@ -31,6 +24,6 @@
     </div>
   </body>
   <footer class="footer">
-    <p>&copy; CGames 2018</p>
+    <p> CGames 2018</p>
   </footer>
 </html>
