Using materalize css. Made the app look better

--- a/cgames/templates/profile.html
+++ b/cgames/templates/profile.html
@@ -1,29 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>CGames</title>
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-  </head>
-  <body>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>CGames Home</title>
+
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="static/stylesheets/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="static/stylesheets/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
+<body>
+  <nav class="light-blue lighten-1" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Home</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="/profile">Profile
+          <style>
+          img {
+            border-radius: 50%
+          }
+          </style>
+          <img src= {{ photo}} width="30" alt="Avatar" align='center'></img>
+        </li>
+      </ul>
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="/profile">Profile</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+  <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <div class="header">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="#"> Home </a></li>
-            <li role="presentation"><a href="signin"> Sign In </a></li>
-            <li role="presentation" class="active"><a href="signin"> Sign Up </a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">Wellcome to CGames!</h3>
+      <br><br>
+      <h1 class="header center orange-text">Welcome {{ vname }}</h1>
+      <div class="row center">
+        <h5 class="header col s12 light">A place to learn how to code Python that feels like playing a game</h5>
       </div>
-      <div class="jumbotron">
-          <img src= {{ photo }} width="50">
-          <strong> {{ vname }} </strong>
+      <div class="row center">
+        <a id="download-button" href="/lessons" class="btn-large waves-effect waves-light orange">Get Started</a>
+      </div>
+      <br><br>
+
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Quick lessons</h5>
+
+            <p class="light">Lessons are quick paced and fun. here are more words to show it fills the whole line</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">User Experience Focused</h5>
+
+            <p class="light">Lessons can be stopped and started at any point.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Easy to work with</h5>
+
+            <p class="light">Pick up where you left off with saved lessons</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <br><br>
+  </div>
+
+  <footer class="page-footer orange">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">CGames</h5>
+          <p class="grey-text text-lighten-4">Bio goes here</p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Settings</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </body>
-  <footer class="footer">
-    <p> CGames 2018</p>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="orange-text text-lighten-3">CGames 2018</a>
+      </div>
+    </div>
   </footer>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
+  </body>
 </html>
