--- a/cgames/templates/profile.html
+++ b/cgames/templates/profile.html
@@ -14,13 +14,16 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Home</a>
       <ul class="right hide-on-med-and-down">
+        <li><a href="/login"> Switch User </a></li>
+        <li><a href="/"> Logout </a></li>
         <li><a href="/profile">Profile
           <style>
           img {
             border-radius: 50%
           }
           </style>
-          <img src= {{ photo}} width="30" alt="Avatar" align='center'></img>
+          <img src= {{ photo}} width="30" alt="Avatar" align='center'></img></a>
+
         </li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
