--- a/cgames/templates/index.html
+++ b/cgames/templates/index.html
@@ -18,7 +18,7 @@
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="/singin">Sign In/Sign Up</a></li>
+        <li><a href="/signin">Sign In/Sign Up</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
