changed index to home and profile to userhome. also fixed config.py

--- a/cgames/templates/home.html
+++ b/cgames/templates/home.html
@@ -14,11 +14,13 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Home</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="/signin">Sign In/Sign Up</a></li>
+        <li>
+          <a href="/Home">&nbsp; Sign In With Google</a>
+        </li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="/signin">Sign In/Sign Up</a></li>
+        <li><a href="/Home">Sign In With Google</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -31,7 +33,7 @@
         <h5 class="header col s12 light">A place to learn how to code python that feels like playing a game</h5>
       </div>
       <div class="row center">
-        <a id="download-button" href="/signin" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a id="download-button" href="/Home" class="btn-large waves-effect waves-light grey lighten-3 grey-text text-darken-1">Get Started</a>
       </div>
       <br><br>
 
@@ -76,8 +78,8 @@
     <br><br>
   </div>
 
-  <footer class="page-footer orange">
-    <div class="container">
+  <footer class="page-footer blue-grey">
+    <div class="container"
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">CGames</h5>
