--- a/cgames/templates/userhome.html
+++ b/cgames/templates/userhome.html
@@ -49,7 +49,7 @@
         <h5 class="header col s12 light">A place to learn how to code Python that feels like playing a game</h5>
       </div>
       <div class="row center">
-        <a id="download-button" href="/lessons" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a id="download-button" href="/lessons" class="btn-large waves-effect waves-light grey lighten-3 grey-text text-darken-1">Get Started</a>
       </div>
       <br><br>
 
@@ -62,39 +62,60 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Quick lessons</h5>
-
-            <p class="light">Lessons are quick paced and fun. here are more words to show it fills the whole line</p>
+        <div class="col s10 m6">
+          <div class="card small">
+            <div class="card-image">
+              <img src="https://tctechcrunch2011.files.wordpress.com/2015/04/codecode.jpg?w=738">
+              <span class="card-title ">Card Title</span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s10 m6">
+          <div class="card small">
+            <div class="card-image">
+              <img src="https://16815-presscdn-0-13-pagely.netdna-ssl.com/wp-content/uploads/2016/03/student-blogging.160401.jpg">
+              <span class="card-title " >Card Title 2 </span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s10 m6">
+          <div class="card small">
+            <div class="card-image">
+              <img src="https://loystar.co/wp-content/uploads/2017/07/community-group.jpg">
+              <span class="card-title " >Card Title 3 </span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
           </div>
         </div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
 
-            <p class="light">Lessons can be stopped and started at any point.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">Pick up where you left off with saved lessons</p>
-          </div>
-        </div>
       </div>
 
     </div>
     <br><br>
   </div>
 
-  <footer class="page-footer orange">
+  <footer class="page-footer blue-grey">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
