Made template landing page look a little nicer

--- a/cgames/templates/home.html
+++ b/cgames/templates/home.html
@@ -33,7 +33,7 @@
         <h5 class="header col s12 light">A place to learn how to code python that feels like playing a game</h5>
       </div>
       <div class="row center">
-        <a id="download-button" href="/Home" class="btn-large waves-effect waves-light grey lighten-3 grey-text text-darken-1">Get Started</a>
+        <a id="download-button" href="/Home" class="btn-large waves-effect waves-teal t grey lighten-3 grey-text text-darken-1">Get Started</a>
       </div>
       <br><br>
 
@@ -78,17 +78,17 @@
     <br><br>
   </div>
 
-  <footer class="page-footer blue-grey">
-    <div class="container"
+  <footer class="page-footer blue darken-1">
+    <div class="container">
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">CGames</h5>
-          <p class="grey-text text-lighten-4">Bio goes here</p>
+          <li><a class="grey-text text-lighten-1" href="https://github.com/briankarUB/CGames">GitHub: CGames</a></li>
 
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Connect</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
             <li><a class="white-text" href="#!">Link 2</a></li>
@@ -97,9 +97,9 @@
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Questions?</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="https://gitter.im/CGames_CSE442/Lobby?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge!">Chat With Us On Gitter</a></li>
             <li><a class="white-text" href="#!">Link 2</a></li>
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
