Added a leaderboard page and link to the home page

--- a/cgames/templates/leaderboard.html
+++ b/cgames/templates/leaderboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>CGames Home</title>
+  <title>Leaderboard Page</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -74,13 +74,14 @@
           <div class="card small">
             <div class="card-image">
               <img src="https://tctechcrunch2011.files.wordpress.com/2015/04/codecode.jpg?w=738">
-              <span class="card-title ">Leaderboard</span>
+              <span class="card-title ">Card Title</span>
             </div>
             <div class="card-content">
-              <p>Click here to see the best CGames coders from around the world.</p>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="/Leaderboard">leaderboard</a>
+              <a href="#">This is a link</a>
             </div>
           </div>
         </div>
